testsuite/bsc.bugs/github/gh353/Bug353_Pat_BSV.bsv.bsc-out.expected
checking package dependencies
compiling Bug353_Pat_BSV.bsv
Error: "Bug353_Pat_BSV.bsv", line 16, column 12: (T0151)
  Constructor `Foo' for type `Bug353_Type::Foo' does not have named fields.
